doc/assets/scss/_doc-main.scss
// Site SipaUI
// CSS par défaut spécifiques au projet
//

header {
    position: fixed;
    width: 100%;
    top: 0;
    background: radial-gradient(circle at 100% 100%, $couleur-secondaire-1, $couleur-secondaire-3);

    .identite {
        padding: $margin-small $margin-small $margin-small $margin-medium2;

        a {
            transition: text-shadow .3s ease;
            text-decoration: none;

            &:hover,
            &:focus,
            &:active {
                color: inherit;
                text-shadow: 0 0 2px $couleur-principale-1;
            }
        }
        svg,
        .titre,
        .version {
            vertical-align: middle;
        }
    }
    * {
        color: $couleur-principale-1 !important;
    }
    .titre {
        font-size: $font-size-tall;
        margin-left: $margin-resp-small
    }
}
nav {
    $bgColor-menu: $couleur-principale-8;
    $bgColor-sousMenu: $couleur-principale-6;
    box-shadow: 0 2px 3px  1px rgba(0,0,0, .5);

    ul {
        background: $bgColor-menu;
        padding: 5px 20px 0;
    }
    a {
        $couleur: $couleur-principale-1;
        display: inline-block;
        color: $couleur;
        opacity: .8;
        text-decoration: none;
        transition: opacity .3s ease;
        margin-right: $margin-resp-standard;
        border-bottom: 5px solid $bgColor-menu;

        &:hover,
        &.actif {
            color: $couleur;
            border-bottom-color: $couleur-principale-1;
            opacity: 1;
        }
    }
    .sous-menu {
        background: $bgColor-sousMenu;
        a {
            border-bottom-color: $bgColor-sousMenu;
        }
    }
}
main {
    > *:first-child {
        padding-top: 15rem;
    }
    .conteneur {
        padding-left: $margin-standard;
        padding-right: $margin-standard;
    }
}
.trop-large-responsif {
    overflow-x: scroll;
}


.version {
    background: rgba(0,0,0, .4);
    padding: 3px 13px;
    border-radius:  3px;
    font-size: 1.5rem;
    display: inline-block;

}
.presentation {
    font-size: $font-size-medium2;
    color: $couleur-principale-1;
    background: radial-gradient(circle at 35% 10%, $couleur-secondaire-1, $couleur-secondaire-3);
    padding-bottom: 10rem;

    .titre {
        text-align: center;
        margin-bottom: $margin-large;
        * {
            color: $couleur-principale-1 !important;
        }
        h1 {
            margin-bottom: $margin-medium2;
            font-size: $font-size-xxxtall;
        }
    }
    .baseline {
        font-size: $font-size-tall;
        text-align: center;
    }
    .intro {
        background: rgba(0,0,0, .2);
        padding: 1rem;
        border-radius:  10px;
    }
}

.cell {
    display: table-cell;
}
.bas {
    vertical-align: bottom;
}

.carte {
    width: 500px;
    margin-bottom: $margin-resp-small;
}
.integre {
    > ul > li {
        margin-bottom: $margin-resp-standard;
    }
    h2,
    h3 {
        margin-bottom: $margin-resp-small;
    }
}
.tableau-suivi {
    th,
    td {
        width: 45%;

        &:first-child {
            width: 10%;
        }
    }
    .resolu {
        color: $couleur-principale-5;

        &::before,
        li::before {
            background: $couleur-principale-5 !important;
        }
    }
}

.liste-boutons {
    li {
        margin-bottom: $margin-resp-standard;
    }
}

.pas-editorial {
    h1,
    .su-h1,
    h2,
    .su-h2,
    h3,
    .su-h3,
    h4,
    .su-h4,
    h5,
    .su-h5,
    h6,
    .su-h6 {
        font-family: $font-family-titres !important;
        font-weight: $font-weight-titres !important;
        color: $color-titres !important;
    }
}

